# separate-you-get-gui

./: pyproject.toml
separate_you_get_gui/src/: gui.py
