[tool.poetry]
name = "separate-you-get-gui"
version = "0.1.0"
description = ""
authors = ["veledara <71222580+veledara@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "separate_you_get_gui"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
